Fixed mzml issues, so now it should open in other applications I tested with by opening it in SeeMS, and it worked for the first time.

--- a/Program/Properties/launchSettings.json
+++ b/Program/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Program": {
       "commandName": "Project",
-      "commandLineArgs": "\"1\" \"J:\\20220824_QE_DSD_cNP\\quant\\3 MS1\" \"J:\\20220824_QE_DSD_cNP\\quant\\4 DIAUmpire mgfs\" \"J:\\20220824_QE_DSD_cNP\\quant\\4 DIAUmpire mgfs\""
+      "commandLineArgs": "\"D:\\Ashley\\test\" \"D:\\Ashley\\test\" \"D:\\Ashley\\output\""
     }
   }
 }
